# MA-SP-SAM

./: .gitignore  README.md  codex_latest_fix.patch  environment.yml  pyproject.toml
configs/data/: aimseg.yaml  astih_tem.yaml
docs/: RUN_ASTIH_V1.md
scripts/: check_experiment_outputs.py  check_gpu.py  evaluate_baseline.py  inspect_manifest.py  predict_sam_from_self_prompt.py  predict_self_prompt.py  prepare_data.py  refine_sam_predictions.py  run_astih_v1_experiments.py  run_v1_pipeline.py  smoke_dataset.py  train_self_prompt.py  validate_labels.py  visualize_labels.py
tests/: conftest.py  test_aimseg_index.py  test_astih_splits_index.py  test_baseline_eval.py  test_check_experiment_outputs.py  test_config_paths.py  test_dataset_tem.py  test_experiment_config_templates.py  test_experiment_preflight.py  test_experiment_summary.py  test_label_builder.py  test_label_quality.py  test_legacy_pair_refinement.py  test_mask_loader.py  test_pair_refinement.py  test_prompt_synthesizer.py  test_proposal_generator.py  test_proposal_quality.py  test_refine_sam_predictions_smoke.py  test_refine_with_gt_qc.py  test_run_astih_v1_experiments_dry_run.py  test_run_astih_v1_experiments_preflight.py  test_sam_adapter.py  test_sam_adapter_mock.py  test_sam_prompt_converter.py  test_self_prompt_generator.py  test_self_prompt_generator_v2.py  test_self_prompt_losses.py  test_self_prompt_prediction_io.py  test_semantic_pred_labels_io.py  test_targets.py  test_topology.py  test_train_self_prompt_smoke.py  test_v1_pipeline_skip_sam.py  test_v1_summary_fields.py  test_visualize_overlay.py
(+46 files in other folders)
